k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: steambot
  labels:
    app.kubernetes.io/name: steambot
