k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steambot-server
  namespace: steambot
  labels:
    app: steambot-server
spec:
  selector:
    app: steambot-server
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: ClusterIP
